.metadata/.plugins/org.eclipse.cdt.ui/Lab 1.build.log
00:38:30 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j7 all 
arm-none-eabi-gcc "../Core/Src/KalmanFilter_C_CMSIS.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L4S5xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/KalmanFilter_C_CMSIS.d" -MT"Core/Src/KalmanFilter_C_CMSIS.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/KalmanFilter_C_CMSIS.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L4S5xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/KalmanFilter_C_CMSIS.c: In function 'KalmanFilter_C_CMSIS':
../Core/Src/KalmanFilter_C_CMSIS.c:13:29: error: 'Length' undeclared (first use in this function)
   13 |         for (int i = 0; i < Length; i++){
      |                             ^~~~~~
../Core/Src/KalmanFilter_C_CMSIS.c:13:29: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/KalmanFilter_C_CMSIS.c:36:30: error: 'InputArray' undeclared (first use in this function)
   36 |                 arm_sub_f32(&InputArray[i], &(kState->x), temp1, 1);
      |                              ^~~~~~~~~~
../Core/Src/KalmanFilter_C_CMSIS.c:57:17: error: 'OutputArray' undeclared (first use in this function)
   57 |                 OutputArray[i] = kState->x;
      |                 ^~~~~~~~~~~
../Core/Src/KalmanFilter_C_CMSIS.c:11:35: warning: unused variable 'one' [-Wunused-variable]
   11 |     float32_t temp1[1], temp2[1], one[1] = {1.0f};
      |                                   ^~~
../Core/Src/KalmanFilter_C_CMSIS.c:11:25: warning: unused variable 'temp2' [-Wunused-variable]
   11 |     float32_t temp1[1], temp2[1], one[1] = {1.0f};
      |                         ^~~~~
../Core/Src/KalmanFilter_C_CMSIS.c:11:15: warning: unused variable 'temp1' [-Wunused-variable]
   11 |     float32_t temp1[1], temp2[1], one[1] = {1.0f};
      |               ^~~~~
make: *** [Core/Src/subdir.mk:53: Core/Src/KalmanFilter_C_CMSIS.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:122:48: error: 'assemblyResult' undeclared (first use in this function)
  122 |     arm_conv_f32(TEST_ARRAY, measurementCount, assemblyResult, measurementCount,
      |                                                ^~~~~~~~~~~~~~
../Core/Src/main.c:122:48: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:123:18: error: 'convolutionAssembly' undeclared (first use in this function)
  123 |                  convolutionAssembly);
      |                  ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:164:48: error: 'cmsisResult' undeclared (first use in this function)
  164 |     arm_conv_f32(TEST_ARRAY, measurementCount, cmsisResult, measurementCount, convolutionCMSIS);
      |                                                ^~~~~~~~~~~
../Core/Src/main.c:164:79: error: 'convolutionCMSIS' undeclared (first use in this function)
  164 |     arm_conv_f32(TEST_ARRAY, measurementCount, cmsisResult, measurementCount, convolutionCMSIS);
      |                                                                               ^~~~~~~~~~~~~~~~
../Core/Src/main.c:119:9: warning: variable 'resultCMSIS' set but not used [-Wunused-but-set-variable]
  119 |   float resultCMSIS[101];
      |         ^~~~~~~~~~~
../Core/Src/main.c:118:9: warning: variable 'resultC' set but not used [-Wunused-but-set-variable]
  118 |   float resultC[101];
      |         ^~~~~~~
../Core/Src/main.c:117:9: warning: variable 'result' set but not used [-Wunused-but-set-variable]
  117 |   float result[101];
      |         ^~~~~~
make: *** [Core/Src/subdir.mk:53: Core/Src/main.o] Error 1
"make -j7 all" terminated with exit code 2. Build might be incomplete.

00:38:30 Build Failed. 10 errors, 6 warnings. (took 673ms)

